--- a/rllm/trainer/config/ppo_trainer.yaml
+++ b/rllm/trainer/config/ppo_trainer.yaml
@@ -236,6 +236,7 @@ custom_reward_function:
   name: compute_score
 
 algorithm:
+  _target_: verl.trainer.config.AlgoConfig
   gamma: 1.0
   lam: 1.0
   adv_estimator: gae
@@ -243,6 +244,7 @@ algorithm:
   use_kl_in_reward: False
   kl_penalty: kl  # how to estimate kl divergence
   kl_ctrl:
+    _target_: verl.trainer.config.KLControlConfig
     type: fixed
     kl_coef: 0.001
     horizon: 10000
