--- a/rllm/trainer/config/ppo_trainer.yaml
+++ b/rllm/trainer/config/ppo_trainer.yaml
@@ -372,6 +372,8 @@ algorithm:
   pf_ppo:
     reweight_method: pow
     weight_pow: 2.0
+  mask_truncated_samples: False # Zero gradient for truncated samples (by setting advantage=0)
+  clip_advantages: False
 trainer:
   balance_batch: true
   total_epochs: 30
